Fix ABI versioning

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,18 @@ cmake_minimum_required(VERSION 2.8)
 project(uca C)
 
 set(TARNAME "libuca")
-set(UCA_VERSION_MAJOR "1")
-set(UCA_VERSION_MINOR "3")
-set(UCA_VERSION_PATCH "0dev")
 set(UCA_DESCRIPTION "Unified Camera Access")
 
+# These are software release versions
+set(UCA_VERSION_MAJOR "1")
+set(UCA_VERSION_MINOR "3")
+set(UCA_VERSION_PATCH "0")
 set(UCA_VERSION_STRING "${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}.${UCA_VERSION_PATCH}")
-set(UCA_ABI_VERSION "${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}")
+
+# Increase the ABI version when binary compatibility cannot be guaranteed, e.g.
+# symbols have been removed, function signatures, structures, constants etc.
+# changed.
+set(UCA_ABI_VERSION "2")
 
 set(CPACK_PACKAGE_VERSION "${UCA_VERSION_STRING}")
 set(CPACK_PACKAGE_NAME "${TARNAME}")
