--- a/package.sh.in
+++ b/package.sh.in
@@ -1,7 +1,11 @@
 HEADERS_POSTFIX="devel"
+PROGRAMS_POSTFIX="tools"
+PACKAGE_VERSION="${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}.${UCA_VERSION_PATCH}"
+
+cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;executables;/" -D CPACK_PACKAGE_NAME="${CPACK_PACKAGE_NAME}-$PROGRAMS_POSTFIX" -D CPACK_PACKAGE_FILE_NAME="${CPACK_PACKAGE_NAME}-$PACKAGE_VERSION-$PROGRAMS_POSTFIX"
 
 cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;libraries;/" -D CPACK_PACKAGE_VERSION=${UCA_VERSION_STRING}
-cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;headers;/" -D CPACK_PACKAGE_NAME="${CPACK_PACKAGE_NAME}-$HEADERS_POSTFIX" -D CPACK_PACKAGE_FILE_NAME="${CPACK_PACKAGE_NAME}-${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}.${UCA_VERSION_PATCH}-$HEADERS_POSTFIX"
+cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;headers;/" -D CPACK_PACKAGE_NAME="${CPACK_PACKAGE_NAME}-$HEADERS_POSTFIX" -D CPACK_PACKAGE_FILE_NAME="${CPACK_PACKAGE_NAME}-$PACKAGE_VERSION-$HEADERS_POSTFIX"
 
 # Build packages for all available cameras
 for shell_script in `find -name 'package-plugin-*.sh'`; do
