--- a/plugins/mock/CMakeLists.txt
+++ b/plugins/mock/CMakeLists.txt
@@ -5,6 +5,7 @@ set(UCA_CAMERA_NAME "mock")
 set(PLUGIN_VERSION "1.0.0")
 set(PLUGIN_REVISION "0")
 set(PLUGIN_REQUIRES "libuca >= 1.2.0")
+set(PLUGIN_SUMMARY "Mock plugin for libuca")
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../package-plugin.sh.in
                ${CMAKE_CURRENT_BINARY_DIR}/../../package-plugin-${UCA_CAMERA_NAME}.sh)
