--- a/plugins/pylon/CMakeLists.txt
+++ b/plugins/pylon/CMakeLists.txt
@@ -18,6 +18,6 @@ if (PYLON_FOUND)
                           ${LIBPYLONCAM_LIBRARIES})
 
     install(TARGETS ucapylon
-            LIBRARY DESTINATION ${LIB_INSTALL_DIR}/uca
+            LIBRARY DESTINATION ${UCA_PLUGINDIR}
             COMPONENT ${UCA_CAMERA_NAME})
 endif()
