--- a/bin/gui/config.h.in
+++ b/bin/gui/config.h.in
@@ -1,1 +1,1 @@
-#define CONTROL_GLADE_PATH "${CMAKE_INSTALL_PREFIX}/share/libuca/control.glade"
+#define CONTROL_GLADE_PATH "${UCA_GLADE_DIR}/control.glade"
