--- a/plugins/pf/CMakeLists.txt
+++ b/plugins/pf/CMakeLists.txt
@@ -28,6 +28,6 @@ if (PF_FOUND AND CLSERME4_FOUND AND FGLIB5_FOUND)
                           ${FGLIB5_LIBRARY})
 
     install(TARGETS ucapf
-            LIBRARY DESTINATION ${LIB_INSTALL_DIR}/uca
+            LIBRARY DESTINATION ${UCA_PLUGINDIR}
             COMPONENT ${UCA_CAMERA_NAME})
 endif()
