--- a/plugins/ufo/CMakeLists.txt
+++ b/plugins/ufo/CMakeLists.txt
@@ -12,7 +12,8 @@ if (IPE_FOUND)
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../package-plugin.sh.in
                    ${CMAKE_CURRENT_BINARY_DIR}/../../package-plugin-${UCA_CAMERA_NAME}.sh)
 
-    include_directories(${IPE_INCLUDE_DIRS})
+    include_directories(${IPE_INCLUDE_DIRS}
+                        ${UCA_CONFIGDIR})
 
     add_library(ucaufo SHARED
                 uca-ufo-camera.c)
