--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(UCA_CONFIGDIR "${CMAKE_CURRENT_BINARY_DIR}../src")
+set(UCA_CONFIGDIR "${CMAKE_CURRENT_BINARY_DIR}/../src")
 
 add_subdirectory(mock)
 add_subdirectory(pf)
