Many updates and bugfixes to pylon camera plugin.

--- a/plugins/pylon/CMakeLists.txt
+++ b/plugins/pylon/CMakeLists.txt
@@ -10,9 +10,16 @@ if (PYLON_FOUND)
                    ${CMAKE_CURRENT_BINARY_DIR}/../../package-plugin-${UCA_CAMERA_NAME}.sh)
 
     include_directories(${LIBPYLONCAM_INCLUDEDIR}
+                        ${CMAKE_CURRENT_SOURCE_DIR}
+                        ${CMAKE_CURRENT_BINARY_DIR}
                         ${UCA_CONFIGDIR})
 
+    create_enums(uca-pylon-enums
+                 ${CMAKE_CURRENT_SOURCE_DIR}/../../src/uca-enums
+                 uca-pylon-camera.h)
+                 
     add_library(ucapylon SHARED
+                uca-pylon-enums.c
                 uca-pylon-camera.c)
 
     target_link_libraries(ucapylon
