Improve package information of pylon plugin.

--- a/plugins/pylon/CMakeLists.txt
+++ b/plugins/pylon/CMakeLists.txt
@@ -1,10 +1,18 @@
 cmake_minimum_required(VERSION 2.6)
 project(ucapylon C)
+set(VERSION "1.0.0")
 
 find_package(Pylon)
 
 if (PYLON_FOUND)
     set(UCA_CAMERA_NAME "pylon")
+    set(PLUGIN_VERSION ${VERSION})
+    set(PLUGIN_REVISION "2")
+    set(PLUGIN_SUMMARY "Pylon plugin for libuca")
+    set(PLUGIN_CHANGELOG "${CMAKE_CURRENT_SOURCE_DIR}/changelog.txt")
+    set(PLUGIN_DESCRIPTION "Plugin for the Basler GigE CCD Camera.")
+    set(PLUGIN_REQUIRES "libuca >= 1.3.0, libpyloncam >= 0.2.3")
+    set(PLUGIN_VENDOR "ANKA Computing Group")
 
     configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../package-plugin.sh.in
                    ${CMAKE_CURRENT_BINARY_DIR}/../../package-plugin-${UCA_CAMERA_NAME}.sh)
