improve package file naming

--- a/package.sh.in
+++ b/package.sh.in
@@ -1,6 +1,6 @@
 HEADERS_POSTFIX="devel"
 PROGRAMS_POSTFIX="tools"
-PACKAGE_VERSION="${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}.${UCA_VERSION_PATCH}"
+PACKAGE_VERSION="${UCA_VERSION_MAJOR}.${UCA_VERSION_MINOR}.${UCA_VERSION_PATCH}-${CPACK_PACKAGE_RELEASE}"
 
 cpack -D CPACK_INSTALL_CMAKE_PROJECTS="${CMAKE_CURRENT_BINARY_DIR}/;Project;executables;/" -D CPACK_PACKAGE_NAME="${CPACK_PACKAGE_NAME}-$PROGRAMS_POSTFIX" -D CPACK_PACKAGE_FILE_NAME="${CPACK_PACKAGE_NAME}-$PACKAGE_VERSION-$PROGRAMS_POSTFIX"
 
