Output the list of built plugins

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -10,3 +10,12 @@ add_subdirectory(dexela)
 if (CMAKE_CXX_COMPILER)
     add_subdirectory(xkit)
 endif()
+
+message("-- Building the following plugins:")
+set(_plugins "mock;pf;pco;pylon;ufo;dexela;xkit")
+
+foreach(_target ${_plugins})
+    if (TARGET "uca${_target}")
+        message("--  ${_target}")
+    endif()
+endforeach()
