--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,5 +4,7 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/gtester.xsl
                ${CMAKE_CURRENT_BINARY_DIR}/gtester.xsl)
 
 add_executable(test-mock test-mock.c)
+add_executable(test-ring-buffer test-ring-buffer.c)
 
 target_link_libraries(test-mock uca ${UCA_DEPS})
+target_link_libraries(test-ring-buffer uca ${UCA_DEPS})
