Add Andor Neo sCMOS camera plugin
This change adds preliminary support for the Andor Neo line of fast sCMOS
cameras available through the "andor" plugin.

This single commit is the combined effort of Matthias Vogelgesang, Sven Werchner
and Suren Chilingaryan.

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -8,9 +8,10 @@ add_subdirectory(pylon)
 add_subdirectory(ufo)
 add_subdirectory(dexela)
 add_subdirectory(xkit)
+add_subdirectory(andor)
 
 message("-- Building the following plugins:")
-set(_plugins "mock;file;pf;pco;pylon;ufo;dexela;xkit")
+set(_plugins "mock;file;pf;pco;pylon;ufo;dexela;xkit;andor")
 
 foreach(_target ${_plugins})
     if (TARGET "uca${_target}")
