--- a/src/config.h.in
+++ b/src/config.h.in
@@ -5,3 +5,4 @@
 #cmakedefine HAVE_PYLON_CAMERA
 #cmakedefine HAVE_DEXELA_CL
 #cmakedefine HAVE_MOCK_CAMERA
+#cmakedefine UCA_PLUGINDIR      "${UCA_PLUGINDIR}"
