--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(UCA_CONFIGDIR "${CMAKE_CURRENT_BINARY_DIR}/../src")
 
 add_subdirectory(mock)
+add_subdirectory(file)
 add_subdirectory(pf)
 add_subdirectory(pco)
 add_subdirectory(pylon)
@@ -9,7 +10,7 @@ add_subdirectory(dexela)
 add_subdirectory(xkit)
 
 message("-- Building the following plugins:")
-set(_plugins "mock;pf;pco;pylon;ufo;dexela;xkit")
+set(_plugins "mock;file;pf;pco;pylon;ufo;dexela;xkit")
 
 foreach(_target ${_plugins})
     if (TARGET "uca${_target}")
