Export plugin dir in the pkg-config description

--- a/src/libuca.pc.in
+++ b/src/libuca.pc.in
@@ -4,6 +4,7 @@ libdir=@UCA_LIBDIR@
 includedir=@UCA_INCLUDEDIR@
 girdir=@UCA_GIRDIR@
 typelibdir=@UCA_TYPELIBDIR@
+plugindir=@UCA_PLUGINDIR@
 
 Name: libuca
 Description: @UCA_DESCRIPTION@
