Use pkg-config to determine GI support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ endmacro()
 #}}}
 #{{{ Configure
 include(ConfigurePaths)
+include(PkgConfigVars)
 configure_paths(UCA)
 
 set(UCA_PLUGINDIR "${UCA_LIBDIR}/uca")
